<resources>
    <string name="app_name">Zar3tak</string>
    <string name="zar3tak">Zar3tak</string>
    <string name="welcome_manager">Welcome Manager !</string>
    <string name="login_as_manager">Log In As Manager</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name_hint">User Name</string>
    <string name="register">Register</string>
    <string name="create_an_account_for_clerk_or_worker">Create an account for clerk or worker</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="phone_hint">Phone</string>
    <string name="floor_number_hint">Floor Number</string>
    <string name="clerk_radio_button">Clerk</string>
    <string name="worker_radio_button">Worker</string>
    <string name="manager_radio_button">Manager</string>
    <string name="sign_in_">Sign In !</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in">Sign In</string>
    <string name="copyright_c_2020_cafecompany">Copyright C 2020 CafeCompany</string>
    <string name="manager_version">Manager Version</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="clerks">Clerks</string>
    <string name="workers">Workers</string>
    <string name="sign_out">Sign Out</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="community">Community</string>
    <string name="manager_name">Manager Name</string>
    <string name="manager_phone">Manager Phone</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clerkno_1">ClerkNo.1</string>
    <string name="clerk_rate">Clerk Rate : </string>
    <string name="_0_0"> 0.0</string>
    <string name="_3000_0_month">3000.0/month</string>
    <string name="add_clerk">Add Clerk</string>
    <string name="add_worker">Add Worker</string>
    <string name="personal">Personal</string>
    <string name="clerk_no_1">Clerk No.1</string>
    <string name="clerkno1_gmail_com">clerkno1@gmail.com</string>
    <string name="all_orders">All Orders</string>
    <string name="_0">0</string>
    <string name="all_stars">All Stars</string>
    <string name="rate">Rate</string>
    <string name="remove_clerk">Remove Clerk</string>
    <string name="create_an_account_for_clerk">Create an account for Clerk</string>
    <string name="create_an_account_for_customer_or_seller">Create an account for Customer or Seller</string>
    <string name="national_id">National ID</string>
    <string name="customer">Customer</string>
    <string name="seller">Seller</string>
    <string name="create_new_account">Create New Account ?</string>
    <string name="or_sign_in">Or Sign In ?</string>
    <string name="agriculture">Agriculture</string>
</resources>