<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_layout"
    android:fitsSystemWindows="true"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF"
        tools:context="elkassas.caffemanager.Login">
        <TextView
            android:id="@+id/login_sign_in_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/login_second_constraint"
            android:layout_marginStart="12dp"
            android:textColor="#000"
            android:textSize="32sp"
            android:textStyle="bold"
            android:text="@string/sign_in_"
            android:fontFamily="serif"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_second_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email_edit_txt"
                android:layout_width="250dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/btn_back"
                app:layout_constraintTop_toTopOf="parent"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="12dp"
                android:hint="@string/email_hint"
                android:textColorHint="#067710"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#067710"
                android:fontFamily="sans-serif-condensed"
                android:inputType="textEmailAddress"
                />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_edit_text"
                android:layout_width="250dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/btn_back"
                app:layout_constraintTop_toBottomOf="@id/login_email_edit_txt"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_password_icon"
                android:drawablePadding="12dp"
                android:hint="@string/password_hint"
                android:textColorHint="#067710"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#067710"
                android:fontFamily="sans-serif-condensed"
                android:inputType="textPassword"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <CheckBox
            android:id="@+id/login_remember_me_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login_second_constraint"
            app:layout_constraintStart_toStartOf="@id/login_second_constraint"
            app:layout_constraintEnd_toEndOf="@id/login_second_constraint"
            android:layout_marginTop="12dp"
            android:text="@string/remember_me"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#000"
            android:buttonTint="#000"
            android:letterSpacing="0.1"
            android:visibility="invisible"
            />
        <Button
            android:id="@+id/login_sign_in_btn"
            android:layout_width="180dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/login_second_constraint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/btn_back2"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textAlignment="center"
            android:letterSpacing="0.08"
            />
        <TextView
            android:id="@+id/login_create_new_account_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login_sign_in_btn"
            app:layout_constraintStart_toStartOf="@id/login_sign_in_btn"
            app:layout_constraintEnd_toEndOf="@id/login_sign_in_btn"
            android:layout_marginTop="8dp"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="16sp"
            android:letterSpacing="0.07"
            android:text="@string/create_new_account"/>
        <FrameLayout
            android:id="@+id/progressBarHolder_login"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.4"
            android:animateLayoutChanges="true"
            android:background="#000000"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:indeterminate="true"
                android:layout_gravity="center" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>