<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scroll_layout"
        android:fitsSystemWindows="true"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            tools:context="elkassas.caffemanager.SignUp">
            <TextView
                android:id="@+id/sign_up_register_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="@id/sign_up_create_an_account_text"
                app:layout_constraintStart_toStartOf="@id/sign_up_create_an_account_text"
                android:layout_marginTop="48dp"
                android:textColor="#067710"
                android:textStyle="bold"
                android:textSize="28sp"
                android:text="@string/register"
                android:letterSpacing="0.1"
                />
            <TextView
                android:id="@+id/sign_up_create_an_account_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sign_up_register_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="4dp"
                android:textColor="#067710"
                android:textSize="16sp"
                android:text="@string/create_an_account_for_customer_or_seller"
                android:textStyle="bold"
                android:letterSpacing="0.016"
                />
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/sign_up_user_img"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="24dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_add_user"
                app:layout_constraintEnd_toEndOf="@id/sign_up_user_name_edit_txt"
                app:layout_constraintStart_toStartOf="@id/sign_up_user_name_edit_txt"
                app:layout_constraintTop_toBottomOf="@id/sign_up_create_an_account_text"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_user_name_edit_txt"
                android:layout_width="250dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/btn_back"
                app:layout_constraintTop_toBottomOf="@id/sign_up_user_img"
                android:layout_marginTop="12dp"
                android:drawableStart="@drawable/ic_username_icon"
                android:drawablePadding="12dp"
                android:hint="@string/user_name_hint"
                android:textColorHint="#067710"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#067710"
                android:fontFamily="sans-serif-condensed"
                android:inputType="textPersonName"

                />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_email_edit_txt"
                android:layout_width="250dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/btn_back"
                app:layout_constraintTop_toBottomOf="@id/sign_up_user_name_edit_txt"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="12dp"
                android:hint="@string/email_hint"
                android:textColorHint="#067710"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#067710"
                android:fontFamily="sans-serif-condensed"
                android:inputType="textEmailAddress"
                />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_password_edit_txt"
                android:layout_width="250dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/btn_back"
                app:layout_constraintTop_toBottomOf="@id/sign_up_email_edit_txt"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_password_icon"
                android:drawablePadding="12dp"
                android:hint="@string/password_hint"
                android:textColorHint="#067710"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#067710"
                android:fontFamily="sans-serif-condensed"
                android:inputType="textPassword"
                />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_phone_edit_txt"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:paddingStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/btn_back"
                app:layout_constraintTop_toBottomOf="@id/sign_up_password_edit_txt"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_phone_icon"
                android:drawablePadding="12dp"
                android:hint="@string/phone_hint"
                android:textColorHint="#067710"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#067710"
                android:fontFamily="sans-serif-condensed"
                android:inputType="phone"
                tools:ignore="RtlSymmetry" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_national_id_edit_txt"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:paddingStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/btn_back"
                app:layout_constraintTop_toBottomOf="@id/sign_up_phone_edit_txt"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_national_id"
                android:drawablePadding="12dp"
                android:hint="@string/national_id"
                android:textColorHint="#067710"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#067710"
                android:fontFamily="sans-serif-condensed"
                android:inputType="number"
                android:maxLength="14"
                tools:ignore="RtlSymmetry" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sign_up_radio_constraint"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sign_up_national_id_edit_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp">
                <RadioGroup
                    android:id="@+id/sign_up_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:orientation="horizontal"
                    android:weightSum="2">

                        <RadioButton
                            android:id="@+id/sign_up_customer_radio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/customer"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="#067710"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_weight="1"
                            />
                        <RadioButton
                            android:id="@+id/sign_up_seller_radio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/seller"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="#067710"
                            android:layout_weight="1"
                            />
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <Button
                android:id="@+id/sign_up_sign_up_btn"
                android:layout_width="180dp"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@id/sign_up_radio_constraint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/btn_back2"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textAlignment="center"
                />
            <TextView
                android:id="@+id/sign_up_sign_in_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sign_up_sign_up_btn"
                app:layout_constraintStart_toStartOf="@id/sign_up_sign_up_btn"
                app:layout_constraintEnd_toEndOf="@id/sign_up_sign_up_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="16sp"
                android:letterSpacing="0.07"
                android:text="@string/or_sign_in"/>
            <FrameLayout
                android:id="@+id/sign_up_progressBarHolder"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:alpha="0.4"
                android:animateLayoutChanges="true"
                android:background="#000000"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
                <ProgressBar
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:indeterminate="true"
                    android:layout_gravity="center" />
            </FrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>